ci: add SQLX_OFFLINE=true to fix sqlx-adapter build errors
The sqlx-adapter crate requires type annotations that SQLx macros
cannot provide without a live database connection. Adding SQLX_OFFLINE=true
enables using cached .sqlx metadata files instead.

--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -145,6 +145,8 @@ jobs:
           cargo test --workspace --lib --bins \
             --exclude integration_tests \
             -- --nocapture --test-threads=4
+        env:
+          SQLX_OFFLINE: true
 
       - name: Upload test results
         if: always()
