fix(ci): add Wait for PostgreSQL step to security-tests job
Root cause: Security tests were failing because the job attempted to
run database migrations before PostgreSQL was ready. The 'Wait for
PostgreSQL' step was present in lint and integration-tests jobs but
missing from security-tests.

This fix adds the same wait step to ensure PostgreSQL is ready before
running migrations and tests.

--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -295,6 +295,13 @@ jobs:
             --version 0.8.6 \
             || echo "sqlx-cli already installed"
 
+      - name: Wait for PostgreSQL
+        run: |
+          until pg_isready -h localhost -p 5432 -U postgres; do
+            echo "Waiting for PostgreSQL..."
+            sleep 2
+          done
+
       - name: Setup test database
         run: |
           sqlx migrate run --database-url "${{ env.DATABASE_URL }}"
