fix(ci): add sqlx prepare step to security-tests and coverage jobs
The security-tests and coverage jobs were missing the 'cargo sqlx prepare'
step that generates query metadata for compilation. This is required
because user_service tests use sqlx::query! macros.

Without this step, tests fail to compile because SQLx cannot validate
queries at compile time.

--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -318,7 +318,11 @@ jobs:
 
       - name: Setup test database
         run: |
+          # Run migrations
           sqlx migrate run --database-url "${{ env.DATABASE_URL }}"
+
+          # Generate sqlx metadata for offline compilation
+          cargo sqlx prepare --workspace --database-url "${{ env.DATABASE_URL }}"
 
       - name: Run security tests
         run: |
@@ -417,7 +421,11 @@ jobs:
 
       - name: Setup test database
         run: |
+          # Run migrations
           sqlx migrate run --database-url "${{ env.DATABASE_URL }}"
+
+          # Generate sqlx metadata for offline compilation
+          cargo sqlx prepare --workspace --database-url "${{ env.DATABASE_URL }}"
 
       - name: Run tests with coverage
         run: |
