fix(inventory): restore AppState with UniversalDummyService and fix concurrent stock tests

--- a/infra/docker_compose/docker-compose.yml
+++ b/infra/docker_compose/docker-compose.yml
@@ -104,7 +104,7 @@ services:
       retries: 5
       start_period: 30s
 
-  kanidm-init:
+  # kanidm-init:
     # Temporarily disabled - custom image 'kanidm-init-complete:latest' not available
     # Uncomment and build image when ready
     # image: kanidm-init-complete:latest
