fix(pr_review): document Rust 1.82+ requirement [TaskID: 04.14.03]
- Added rust-version = "1.82" to [workspace.package] in Cargo.toml
- This documents the minimum Rust version required for is_none_or() method
- Added new deferred issue to task file for warehouse_id filter in scrap.rs
  (MVP workaround acknowledged; requires user decision on whether to fix)

Quality gates passed:
- SQLX_OFFLINE=true cargo check --workspace
- SQLX_OFFLINE=true cargo clippy --workspace -- -D warnings

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -91,4 +91,5 @@ zxcvbn = "3.1"
 [workspace.package]
 authors = ["tymon3568 <tymon3568@gmail.com>"]
 edition = "2021"
+rust-version = "1.82"
 version = "0.1.0"
