docs: add multi-tenant CORS configuration to .env.example files
- Update frontend/.env.example with tenant context documentation
- Update backend .env.example with multi-tenant CORS examples
- Document subdomain-based tenancy setup for local development

TaskID: 08.02.05

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,13 +1,76 @@
+# =============================================================================
+# Anthill Frontend Environment Configuration
+# =============================================================================
+
 # API Configuration
+# -----------------
+# Base URL for the backend API (user service)
 PUBLIC_API_BASE_URL=http://localhost:8000/api/v1
 
 # Development settings
+# --------------------
 PUBLIC_APP_ENV=development
 
 # Kanidm OAuth2 Configuration
+# ---------------------------
+# OAuth2 client ID registered in Kanidm
 PUBLIC_KANIDM_CLIENT_ID=anthill-frontend
+
+# Kanidm issuer URL for OIDC discovery
 PUBLIC_KANIDM_ISSUER_URL=https://idm.example.com
+
+# OAuth2 callback URL (must match Kanidm client configuration)
 PUBLIC_KANIDM_REDIRECT_URI=http://localhost:5173/api/v1/auth/oauth/callback
 
 # Backend User Service (OAuth2 proxy)
+# -----------------------------------
 PUBLIC_USER_SERVICE_URL=http://localhost:8000
+
+# =============================================================================
+# Multi-Tenancy Configuration
+# =============================================================================
+#
+# Anthill supports multi-tenant authentication via:
+# 1. Subdomain-based tenant detection (recommended for production)
+# 2. X-Tenant-ID header (for development/testing)
+# 3. Manual tenant input in login form (fallback for localhost)
+#
+# -----------------------------------------------------------------------------
+# SUBDOMAIN-BASED TENANCY (Recommended)
+# -----------------------------------------------------------------------------
+# Access tenant-specific URLs like:
+#   - http://acme.localhost:5173 (development)
+#   - https://acme.anthill.example.com (production)
+#
+# For local development with subdomains, add to /etc/hosts:
+#   127.0.0.1 acme.localhost
+#   127.0.0.1 demo.localhost
+#
+# And configure backend CORS_ORIGINS to allow these origins:
+#   CORS_ORIGINS=http://localhost:5173,http://acme.localhost:5173,http://demo.localhost:5173
+#
+# -----------------------------------------------------------------------------
+# BACKEND CORS CONFIGURATION
+# -----------------------------------------------------------------------------
+# The backend user_service reads CORS_ORIGINS from environment.
+# For development, ensure your backend .env includes:
+#
+#   # Allow localhost and tenant subdomains
+#   CORS_ORIGINS=http://localhost:5173,http://localhost:8000,http://acme.localhost:5173
+#
+# For production:
+#   CORS_ORIGINS=https://anthill.example.com,https://*.anthill.example.com
+#
+# Note: Wildcard origins (*.domain.com) require special handling in the backend.
+# Currently, each origin must be explicitly listed.
+#
+# -----------------------------------------------------------------------------
+# TENANT DETECTION PRIORITY
+# -----------------------------------------------------------------------------
+# The frontend detects tenant context in this order:
+# 1. X-Tenant-ID HTTP header (set by API client)
+# 2. Subdomain from URL (e.g., acme.localhost)
+# 3. Persisted tenant slug from localStorage
+# 4. Manual input via login form Organization field
+#
+# =============================================================================
