--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,9 @@ CASBIN_MODEL_PATH=./shared/auth/casbin_model.conf
 ENCRYPTION_KEY=your-encryption-key-32-bytes-minimum-change-this
 
 # CORS Configuration (comma-separated origins)
+# For multi-tenant support with subdomains, add each tenant subdomain:
+# CORS_ORIGINS=http://localhost:5173,http://acme.localhost:5173,http://demo.localhost:5173
+# Note: Wildcard origins require credentials=false. List specific origins for cookie auth.
 CORS_ORIGINS=http://localhost:8000,http://localhost:5173
 
 # Rate Limiting
