feat(auth): implement secure user invitation system core layer [TaskID: 03.03.04]
- Add user_invitations table migration with security features
- Implement Invitation model and repository/service traits
- Add comprehensive DTOs with validation and OpenAPI docs
- Implement cryptographically secure token generation (128-bit entropy, SHA-256 hash-at-rest)
- Add required crypto dependencies (base64, rand, sha2, hex)
- Update task status to InProgress_By_Claude

--- a/services/user_service/core/Cargo.toml
+++ b/services/user_service/core/Cargo.toml
@@ -22,6 +22,10 @@ utoipa = {workspace = true}
 uuid = {workspace = true}
 validator = {workspace = true}
 zxcvbn = {workspace = true}
+base64 = "0.22"
+rand = "0.8"
+sha2 = "0.10"
+hex = "0.4"
 
 [dev-dependencies]
 criterion = {workspace = true}
