--- a/services/user_service/api/Cargo.toml
+++ b/services/user_service/api/Cargo.toml
@@ -15,6 +15,7 @@ shared-auth = {workspace = true}
 shared_config = {workspace = true}
 shared_db = {workspace = true}
 shared_error = {workspace = true}
+shared_jwt = {workspace = true}
 sqlx = {workspace = true, features = ["postgres", "runtime-tokio-rustls", "macros", "bigdecimal"]}
 # Async runtime
 tokio = {workspace = true}
