--- a/services/user_service/infra/Cargo.toml
+++ b/services/user_service/infra/Cargo.toml
@@ -1,9 +1,13 @@
 [dependencies]
 async-trait = {workspace = true}
+base64 = "0.22"
 bcrypt = {workspace = true}
 chrono = {workspace = true}
+hex = "0.4"
+rand = "0.8"
 serde_json = {workspace = true}
 sha2 = {workspace = true}
+shared-auth = {workspace = true}
 shared_db = {workspace = true}
 shared_error = {workspace = true}
 shared_jwt = {workspace = true}
