--- a/services/user_service/infra/Cargo.toml
+++ b/services/user_service/infra/Cargo.toml
@@ -13,6 +13,7 @@ shared_error = {workspace = true}
 shared_jwt = {workspace = true}
 # External deps
 sqlx = {workspace = true, features = ["postgres", "runtime-tokio-rustls", "macros"]}
+tokio = {workspace = true}
 tracing = {workspace = true}
 # Internal crates
 user_service_core = {workspace = true}
