feat: implement rate limiting for authentication endpoints
- Create shared/rate_limit crate with RateLimiter trait abstraction
- Implement RedisRateLimiter with sliding window algorithm (Lua scripts)
- Implement InMemoryRateLimiter for single-instance/testing
- Create RateLimitLayer middleware for Axum with per-route configuration
- Add AccountLockout with progressive delays (1s, 2s, 4s, 8s, 16s)
- Integrate rate limiting into user_service for login, register, refresh, accept-invite
- Add rate limit configuration to shared/config (env variables)
- Support trusted IPs bypass and graceful Redis fallback
- Add 24 unit tests for rate limiting algorithms

Task: V1_MVP/03_User_Service/3.6_Self_Auth_Enhancements/task_03.06.03_rate_limiting.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ members = [
   "shared/types",
   "shared/db",
   "shared/auth",
-  "shared/events"
+  "shared/events",
+  "shared/rate_limit"
 ]
 resolver = "2"
 
@@ -35,6 +36,8 @@ dotenvy = "0.15"
 fake = {version = "2.9", features = ["derive", "uuid", "chrono"]}
 # Futures
 futures = "0.3"
+# Hex encoding
+hex = "0.4"
 # Inventory service crates (internal)
 inventory_service_core = {path = "services/inventory_service/core"}
 inventory_service_infra = {path = "services/inventory_service/infra"}
@@ -62,6 +65,7 @@ shared_db = {path = "shared/db"}
 shared_error = {path = "shared/error"}
 shared_events = {path = "shared/events"}
 shared_jwt = {path = "shared/jwt"}
+shared_rate_limit = {path = "shared/rate_limit"}
 shared_types = {path = "shared/types"}
 # SQLx - database
 sqlx = {version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono"]}
