feat(authz): implement Redis-backed AuthZ version store
Implements hybrid versioning strategy for immediate-effect permission changes:
- Core trait AuthzVersionRepository with get/bump/warm/invalidate APIs
- RedisAuthzVersionRepository infra implementation
- Redis fast path with PostgreSQL fallback (source of truth)
- Graceful degradation on Redis miss/error with structured logging
- Cache TTL: 1 hour, Redis timeout: 100ms

Redis keys:
- authz:tenant:{tenant_id}:v
- authz:user:{user_id}:v

[TaskID: 03.05.02]

--- a/services/user_service/infra/Cargo.toml
+++ b/services/user_service/infra/Cargo.toml
@@ -5,6 +5,7 @@ bcrypt = {workspace = true}
 chrono = {workspace = true}
 hex = "0.4"
 rand = "0.8"
+redis = {workspace = true}
 serde_json = {workspace = true}
 sha2 = {workspace = true}
 shared-auth = {workspace = true}
