feat(user-service): Implement SMTP email sender with lettre crate [TaskID: 03.06.04]
- Add lettre v0.11 dependency with tokio1-rustls-tls feature
- Create SmtpEmailSender in infra/src/auth/smtp_sender.rs
  - Async SMTP sending with AsyncSmtpTransport
  - TLS/STARTTLS support for secure transmission
  - Authentication with username/password
  - Graceful fallback when SMTP not configured (logs emails)
- Add email templates for verification and password reset
  - Responsive HTML templates
  - Plain text alternatives
- Update EmailVerificationServiceImpl to use SharedEmailSender
- Update PasswordResetServiceImpl to use SharedEmailSender
- Update main.rs to initialize SMTP sender from config
- Update .env.example with complete SMTP configuration
- Create task file task_03.06.04_implement_smtp_email_sender.md

This completes the deferred SMTP sub-task from task_03.06.01.

--- a/.env.example
+++ b/.env.example
@@ -57,12 +57,19 @@ SSL_KEY_PATH=/path/to/ssl/private.key
 METRICS_PORT=9090
 HEALTH_CHECK_PORT=8080
 
-# Email Configuration (for notifications)
+# Email/SMTP Configuration (for email verification and password reset)
+# Leave SMTP_HOST empty to disable email sending (emails will be logged instead)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USERNAME=your-email@gmail.com
 SMTP_PASSWORD=your-app-password
 SMTP_FROM_EMAIL=noreply@your-domain.com
+SMTP_FROM_NAME=Anthill
+SMTP_TLS=true
+
+# Email Verification Configuration
+VERIFICATION_BASE_URL=http://localhost:5173
+VERIFICATION_EXPIRY_HOURS=24
 
 # Feature Flags
 ENABLE_OAUTH2=true
