--- a/services/user_service/infra/Cargo.toml
+++ b/services/user_service/infra/Cargo.toml
@@ -4,6 +4,7 @@ base64 = "0.22"
 bcrypt = {workspace = true}
 chrono = {workspace = true}
 hex = "0.4"
+lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
 rand = "0.8"
 redis = {workspace = true}
 serde_json = {workspace = true}
