fix(smtp): Support implicit TLS (port 465) for SMTP providers like Resend
- Use relay() for port 465 (implicit TLS/SSL)
- Use starttls_relay() for port 587 (STARTTLS)
- Tested successfully with Resend SMTP

--- a/.env.example
+++ b/.env.example
@@ -59,11 +59,11 @@ HEALTH_CHECK_PORT=8080
 
 # Email/SMTP Configuration (for email verification and password reset)
 # Leave SMTP_HOST empty to disable email sending (emails will be logged instead)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USERNAME=your-email@gmail.com
-SMTP_PASSWORD=your-app-password
-SMTP_FROM_EMAIL=noreply@your-domain.com
+SMTP_HOST=smtp.resend.com
+SMTP_PORT=465
+SMTP_USERNAME=resend
+SMTP_PASSWORD=re_PMtNeZhm_9CakFT34prbZKyeyNNSpYTZYts
+SMTP_FROM_EMAIL=noreply@your-domain.co
 SMTP_FROM_NAME=Anthill
 SMTP_TLS=true
 
