refactor: modernize tech stack (NGINX→APISIX, Kanidm cleanup, MinIO→RustFS, Redis→KeyDB)
Tech Stack Updates:
- Replace NGINX Gateway with Apache APISIX for dynamic configuration and plugin support
- Remove all Kanidm OAuth2/OIDC integration code (using self-hosted JWT auth instead)
- Migrate from MinIO to RustFS for S3-compatible object storage
- Migrate from Redis to KeyDB for multi-threaded caching
- Migrate from CapRover to Docker Compose deployment

Documentation Updates:
- Update ARCHITECTURE.md with new gateway architecture
- Update docs/production-deployment.md for Docker Compose + APISIX
- Update docs/troubleshooting.md with APISIX debugging
- Update docs/monitoring-setup.md with APISIX log scraping
- Mark infra/nginx/ as deprecated
- Update PROJECT_TRACKING tasks for new tech stack

Frontend Cleanup:
- Remove Kanidm OAuth endpoints and callbacks
- Simplify auth flow to use self-hosted JWT
- Remove groups-based authorization (use role instead)

Backend Cleanup:
- Fix invitation_service.rs field names for SQLx compatibility
- Clean up Kanidm-related code references

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -11,18 +11,7 @@ PUBLIC_API_BASE_URL=http://localhost:8000/api/v1
 # --------------------
 PUBLIC_APP_ENV=development
 
-# Kanidm OAuth2 Configuration
-# ---------------------------
-# OAuth2 client ID registered in Kanidm
-PUBLIC_KANIDM_CLIENT_ID=anthill-frontend
-
-# Kanidm issuer URL for OIDC discovery
-PUBLIC_KANIDM_ISSUER_URL=https://idm.example.com
-
-# OAuth2 callback URL (must match Kanidm client configuration)
-PUBLIC_KANIDM_REDIRECT_URI=http://localhost:5173/api/v1/auth/oauth/callback
-
-# Backend User Service (OAuth2 proxy)
+# Backend User Service
 # -----------------------------------
 PUBLIC_USER_SERVICE_URL=http://localhost:8000
 
