--- a/infra/nginx/conf.d/api-gateway.conf
+++ b/infra/nginx/conf.d/api-gateway.conf
@@ -115,14 +115,14 @@ location ~ ^/api/v1/integrations {
     proxy_read_timeout 30s;
 }
 
-# File Upload Routes (MinIO)
+# File Upload Routes (RustFS - S3-compatible storage)
 location ~ ^/api/v1/files {
     # Allow larger requests for file uploads
     client_max_body_size 50M;
 
     limit_req zone=tenant burst=10 nodelay;
 
-    proxy_pass http://minio;
+    proxy_pass http://rustfs;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -160,17 +160,4 @@ location /api-docs {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
-}
-
-# OAuth2 Callback (Kanidm)
-location /oauth2 {
-    proxy_pass https://kanidm;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-
-    # Kanidm specific headers
-    proxy_set_header X-Forwarded-Host $host;
-    proxy_set_header X-Forwarded-Port $server_port;
 }
