--- a/infra/nginx/conf.d/upstreams.conf
+++ b/infra/nginx/conf.d/upstreams.conf
@@ -41,19 +41,14 @@ upstream integration_service {
     keepalive 32;
 }
 
-# Kanidm Identity Provider (OAuth2/OIDC)
-upstream kanidm {
-    server kanidm:8300;
+# RustFS Object Storage (S3-compatible, replaces MinIO)
+upstream rustfs {
+    server rustfs:9000;
 }
 
-# MinIO Object Storage
-upstream minio {
-    server minio:9000;
-}
-
-# Redis Cache
-upstream redis {
-    server redis:6379;
+# KeyDB Cache (Redis-compatible, high-performance multi-threaded)
+upstream keydb {
+    server keydb:6379;
 }
 
 # NATS Message Queue
