--- a/.env.example
+++ b/.env.example
@@ -31,23 +31,27 @@ RATE_LIMIT_WINDOW_SECONDS=60
 ENABLE_SWAGGER=true
 ENABLE_METRICS=false
 
-# Kanidm OAuth2 Configuration
-KANIDM_URL=https://your-kanidm-domain.com
-KANIDM_CLIENT_ID=anthill
-KANIDM_CLIENT_SECRET=your-oauth2-client-secret-change-this-in-production
-KANIDM_REDIRECT_URL=https://your-app-domain.com/api/v1/auth/oauth/callback
-
-# Redis Configuration (for caching and sessions)
+# KeyDB Configuration (Redis-compatible cache and sessions)
+# KeyDB is a high-performance, multi-threaded Redis alternative
 REDIS_URL=redis://localhost:6379
+KEYDB_URL=redis://localhost:6379
 
 # NATS Configuration (for event streaming)
 NATS_URL=nats://localhost:4222
 
-# MinIO Configuration (for file storage)
-MINIO_ENDPOINT=http://localhost:9000
-MINIO_ACCESS_KEY=minioadmin
-MINIO_SECRET_KEY=minioadmin
-MINIO_BUCKET_NAME=anthill-files
+# RustFS Configuration (S3-compatible object storage)
+# RustFS is a high-performance, Rust-native MinIO alternative
+RUSTFS_ENDPOINT=http://localhost:9000
+RUSTFS_ACCESS_KEY=rustfsadmin
+RUSTFS_SECRET_KEY=rustfsadmin
+RUSTFS_BUCKET_NAME=anthill-files
+RUSTFS_REGION=us-east-1
+
+# Legacy S3/MinIO compatibility aliases (for existing code)
+S3_ENDPOINT=http://localhost:9000
+S3_ACCESS_KEY=rustfsadmin
+S3_SECRET_KEY=rustfsadmin
+S3_BUCKET_NAME=anthill-files
 
 # SSL/TLS Configuration (for Nginx, not application services)
 SSL_CERT_PATH=/path/to/ssl/cert.pem
